reorganizar el contenido

--- a/src/app/account/auth-admin/auth-admin.component.html
+++ b/src/app/account/auth-admin/auth-admin.component.html
@@ -23,7 +23,7 @@
                 <a rel="noopener noreferrer" href="#">Forgot Password ?</a>
             </div>
 
-            <button class="submit-btn">Sign in</button>
+            <button class="button_main">Sign in</button>
         </form>
     </div>
 </section>
