--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -14,11 +14,11 @@
                             <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
                             <div class="overlay"></div>
                         </div>
-                        <div class="product-info">
+                        <!-- <div class="product-info">
                             <p>{{'Action.UploadImage'|translate}}</p>
 
-                            <app-upload-img (imageUploaded)="onImageUploaded($event)"></app-upload-img>
-                        </div>
+                            <app-upload-img (imageUploaded)="onImageUploaded('image',)"></app-upload-img>
+                        </div> -->
                     </div>
 
                     <div class="flex-col">
@@ -188,9 +188,10 @@
     </div>
 
 
-    <form [formGroup]="productForm">
-        <div class="cart-list">
-            <div class="flex-col cart-box" *ngFor="let product of products">
+
+    <div class="cart-list">
+        <div class="flex-col cart-box" *ngFor="let product of products; let i = index">
+            <form [formGroup]="productForms[i]" (ngSubmit)="saveChanges(i)">
                 <div class="flex-container">
                     <div class="product-card">
                         <div class="product-image">
@@ -200,7 +201,7 @@
                             <div class="overlay"></div>
                         </div>
                         <div>
-                            <app-upload-img (imageUploaded)="onImageUploaded($event)"></app-upload-img>
+                            <app-upload-img (imageUploaded)="onImageUploaded($event, i)"></app-upload-img>
                         </div>
                     </div>
                     <div class="flex-col">
@@ -284,6 +285,7 @@
                                         </select>
                                     </div>
                                 </div>
+                               
                                 <div class="flex-container-col" formGroupName="prices">
                                     <label>{{ 'cart.CartItems.Price' | translate }}</label>
                                     <input formControlName="1000" type="number" class="input">
@@ -292,15 +294,17 @@
                                     <label>{{ 'Item.DTO' | translate }}</label>
                                     <input formControlName="1000" type="number" class="input">
                                 </div>
+                            
                             </div>
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="button_main" (click)="saveChanges(product.id)">{{ 'Action.Save' | translate
+                <button type="submit" class="button_main">{{ 'Action.Save' | translate
                     }}</button>
                 <!-- <button type="submit" class="button_main" (click)="removeProduct(product.id)">Eliminar</button> -->
-            </div>
+            </form>
         </div>
-    </form>
+    </div>
+
 
 </section>
