cargar la imagen

--- a/src/app/functionalities/upload-img/upload-img.component.html
+++ b/src/app/functionalities/upload-img/upload-img.component.html
@@ -1,11 +1,6 @@
 <div class="product-card">
-    <!-- <div class="product-image">
-        <img src="./assets/img/{{product.image}}" alt="Exterior photo of {{product.name}}" alt="">
-        <div class="titleCard">{{'Action.UploadImage'|translate}}</div>
-        <div class="overlay"></div>
-    </div> -->
+
     <div class="">
-        <input type="file" (change)="onFileChange($event)" accept="image/*">
-        <button class="CartBtn honey-color" (click)="uploadImage()">{{'Action.UploadImage'|translate}}</button>
-    </div>
+        <input type="file" (change)="onFileChange($event)" />
+<!-- <button (click)="uploadImage()">Upload Image</button> -->
 </div>
