--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -10,14 +10,17 @@
                 <div class="flex-container">
                     <div class="product-card">
                         <div class="product-image">
-                            <!-- <img [src]="'./assets/img/' + productForm.get('image')?.value"
-                                alt="Exterior photo of {{ product.name }}"> -->
-                            <img src="./assets/img/pexels-pixabay-33260.jpg" alt="Exterior photo of {{ product.name }}">
+                            <img src="./assets/img/{{product.image}}"
+                                >
+                            <!-- <img src="./assets/img/pexels-pixabay-33260.jpg" alt="Exterior photo of {{ product.name }}"> -->
                             <div class="titleCard">{{ 'Action.UploadImage' | translate }}</div>
                             <div class="overlay"></div>
                         </div>
-                        <div>
+                        <!-- <div>
                             <app-upload-img (imageUploaded)="onImageUploaded($event, i)"></app-upload-img>
+                        </div> -->
+                        <div>
+                            <input type="file" (change)="onFileChange($event,i)" />
                         </div>
                     </div>
                     <div class="flex-col">
