añadir estilos a los imput y llamar al metodo getProucts

--- a/src/app/stock/stock-honey/add-product/add-product.component.html
+++ b/src/app/stock/stock-honey/add-product/add-product.component.html
@@ -79,9 +79,9 @@
                             </div>
                         </div>
 
+                        <!-- Detalles del Producto -->
                         <div class="cart-item">
                             <div class="cart-item-actions">
-                                <input formControlName="image" placeholder="Image" readonly />
                                 <div class="flex-container-col">
                                     <label>{{'Item.Name'|translate}} </label>
                                     <input type="text" formControlName="name">
@@ -119,9 +119,10 @@
                                         {{'Notices.Name_Is_Required'|translate}}
                                     </div>
                                 </div>
-
+                                
                             </div>
                         </div>
+
                         <div class="flex-container">
                             <div class="cart-item">
                                 <div class="cart-item-actions">
