get de los datos del producto Id

--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -50,7 +50,7 @@
 
       </div>
       <div class="flex-item">
-        <img class="" [src]="housingLocation?.image" alt="Exterior photo of {{housingLocation?.name}}" />
+        <img class="" src="./assets/img/{{housingLocation?.image}}" alt="Exterior photo of {{housingLocation?.name}}" />
       </div>
       <div class="flex-item">
         <section class="">
