--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -2,7 +2,7 @@
 
 
 
-<app-add-product></app-add-product>
+    <app-add-product></app-add-product>
 
     <div class="cart-list">
         <div class="flex-col cart-box" *ngFor="let product of products; let i = index">
@@ -10,8 +10,7 @@
                 <div class="flex-container">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/{{product.image}}"
-                                >
+                            <img src="./assets/img/{{product.image}}">
                             <!-- <img src="./assets/img/pexels-pixabay-33260.jpg" alt="Exterior photo of {{ product.name }}"> -->
                             <div class="titleCard">{{ 'Action.UploadImage' | translate }}</div>
                             <div class="overlay"></div>
@@ -97,7 +96,7 @@
                                     <label for="weightSelector">{{ 'cart.CartItems.Weight' | translate }}</label>
                                     <div class="custom-select-wrapper">
                                         <select formControlName="weight" class="form-control custom-select"
-                                            (change)="onWeightChange(product)">
+                                            (change)="onWeightChange($event, product)">
                                             <option value="1000">1000g</option>
                                             <option value="500">500g</option>
                                             <option value="250">250g</option>
@@ -105,13 +104,13 @@
                                     </div>
                                 </div>
 
-                                <div class="flex-container-col" formGroupName="prices">
+                                <div class="flex-container-col" [formGroupName]="'prices'">
                                     <label>{{ 'cart.CartItems.Price' | translate }}</label>
-                                    <input formControlName="1000" type="number" class="input">
+                                    <input [formControlName]="selectedWeight" type="number" class="input">
                                 </div>
-                                <div class="flex-container-col" formGroupName="discounts">
+                                <div class="flex-container-col" [formGroupName]="'discounts'">
                                     <label>{{ 'Item.DTO' | translate }}</label>
-                                    <input formControlName="1000" type="number" class="input">
+                                    <input [formControlName]="selectedWeight" type="number" class="input">
                                 </div>
 
                             </div>
