--- a/src/app/products/details/details.component.html
+++ b/src/app/products/details/details.component.html
@@ -29,6 +29,7 @@
               </div>
             </div>
             <p>{{'Price' | translate}}: {{ getPrice() | currency }}</p>
+            <p>{{'DTO' | translate}}: {{ getDTO()}} %</p>
             <p>{{'Location'|translate}}: {{housingLocation?.state}}</p>
             <p>{{'Category'|translate}}:: {{housingLocation?.category}}</p>
             <p>{{'Category'|translate}}:: {{housingLocation?.id}}</p>
